--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,9 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 
-jdbc.url=jdbc:mysql://localhost:3306/library
+#jdbc.url=jdbc:mysql://localhost:3306/library
+#jdbc.username=root
+#jdbc.password=123213
+
+jdbc.url=jdbc:mysql://47.94.23.210:3306/library
 jdbc.username=root
-jdbc.password=123213
+jdbc.password=jBrkaTs00b8c
