--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
     id="schedule-console" version="3.0" metadata-complete="true">
 
-	<!--Shiro的Filter
+	<!--Shiro的Filter-->
 	<filter>
 		<filter-name>shiroFilter</filter-name>
 	    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -16,7 +16,7 @@
 	<filter-mapping>
 		<filter-name>shiroFilter</filter-name>
 	    <url-pattern>/*</url-pattern>
-	</filter-mapping>-->
+	</filter-mapping>
 	
 	<filter>
 		<filter-name>encodingFilter</filter-name>
@@ -76,6 +76,6 @@
   	</session-config>
   	
   	<welcome-file-list>
-  		<welcome-file>/WEB-INF/Views/home/index.jsp</welcome-file>
+  		<welcome-file>/WEB-INF/Views/admin/login.jsp</welcome-file>
   	</welcome-file-list>
 </web-app>
