--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -76,6 +76,6 @@
   	</session-config>
   	
   	<welcome-file-list>
-  		<welcome-file>/home/index</welcome-file>
+  		<welcome-file>/WEB-INF/Views/home/index.jsp</welcome-file>
   	</welcome-file-list>
 </web-app>
