--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,12 @@
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
         <!-- Spring JDBC -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -370,6 +376,13 @@
             <artifactId>shiro-quartz</artifactId>
             <version>${shiro.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+
+
         <!-- 平台权限管理shiro支持结束 -->
     </dependencies>
     <!-- maven插件工具开始 -->
