--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -2,42 +2,51 @@
 # to create a Quartz Scheduler Instance, if a different
 # properties file is not explicitly specified.
 #
-#
-#\u96c6\u7fa4\u914d\u7f6e
-org.quartz.scheduler.instanceName: yalunwang_job_test
+
+#============================================================================
+# Configure Main Scheduler Properties
+#============================================================================
+org.quartz.scheduler.instanceName: quartzScheduler
 org.quartz.scheduler.instanceId = AUTO
 
 org.quartz.scheduler.rmi.export: false
 org.quartz.scheduler.rmi.proxy: false
 org.quartz.scheduler.wrapJobExecutionInUserTransaction: false
-
+#============================================================================
+# Configure ThreadPool
+#============================================================================
 org.quartz.threadPool.class: org.quartz.simpl.SimpleThreadPool
-org.quartz.threadPool.threadCount: 10
+org.quartz.threadPool.threadCount: 2
 org.quartz.threadPool.threadPriority: 5
 org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread: true
 
 org.quartz.jobStore.misfireThreshold: 60000
-
 #============================================================================
 # Configure JobStore
 #============================================================================
 
-#\u9ed8\u8ba4\u914d\u7f6e\uff0c\u6570\u636e\u4fdd\u5b58\u5230\u5185\u5b58
+#default config
 #org.quartz.jobStore.class: org.quartz.simpl.RAMJobStore
 #\u6301\u4e45\u5316\u914d\u7f6e
-org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
-org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
-org.quartz.jobStore.useProperties=true
+org.quartz.jobStore.class:org.quartz.impl.jdbcjobstore.JobStoreTX
+org.quartz.jobStore.driverDelegateClass:org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+org.quartz.jobStore.useProperties:true
+
+#============================================================================
+#havent cluster spring
+#============================================================================
+org.quartz.jobStore.isClustered = false
+
 #\u6570\u636e\u5e93\u8868\u524d\u7f00
-org.quartz.jobStore.tablePrefix=qrtz_
-org.quartz.jobStore.dataSource=qzDS
+org.quartz.jobStore.tablePrefix:qrtz_
+#org.quartz.jobStore.dataSource:qzDS
 
 #============================================================================
 # Configure Datasources
 #============================================================================
-#JDBC\u9a71\u52a8
-#org.quartz.dataSource.qzDS.driver=com.mysql.jdbc.Driver
-#org.quartz.dataSource.qzDS.URL=jdbc:mysql://localhost:3306/test
-#org.quartz.dataSource.qzDS.user=root
-#org.quartz.dataSource.qzDS.password=114411
-#org.quartz.dataSource.qzDS.maxConnection=10
+#JDBC\u9a71\u52a8  Sping\u53bb\u7ba1\u7406dataSource \uff0c\u8fd9\u91cc\u4e0d\u5728\u914d\u7f6e\u6570\u636e\u6e90\u4fe1\u606f
+#org.quartz.dataSource.qzDS.driver:com.mysql.jdbc.Driver
+#org.quartz.dataSource.qzDS.URL:jdbc:mysql://localhost:3306/quartz_test
+#org.quartz.dataSource.qzDS.user:root
+#org.quartz.dataSource.qzDS.password:root
+#org.quartz.dataSource.qzDS.maxConnection:10
