--- a/pom.xml
+++ b/pom.xml
@@ -8,106 +8,36 @@
     <name>SSM Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
-    <properties>
-        <!-- 打包编译格式 -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!--指定Maven用什么编码来呈现站点的HTML文件 -->
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <!-- 编译时的编码 -->
-        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-        <!-- 编译jdk版本 -->
-        <jdk.version>1.7</jdk.version>
-        <!-- junit测试版本 -->
-        <junit.version>4.12</junit.version>
-        <!-- 日志 -->
-        <logback.version>1.1.2</logback.version>
-        <!-- slf4j日志api版本 -->
-        <slf4j.version>1.7.21</slf4j.version>
-        <!-- spring系列版本 -->
-        <spring.version>4.3.0.RELEASE</spring.version>
-        <dataformatXml.version>2.8.0.rc2</dataformatXml.version>
-        <aspectj.version>1.8.9</aspectj.version>
-        <!-- mybatis版本 -->
-        <mybatis.version>3.4.0</mybatis.version>
-        <!-- mybatis-spring集成版本 -->
-        <mybatis.spring.version>1.3.0</mybatis.spring.version>
-
-        <!-- web支持jar版本 -->
-        <servlet-api.version>3.1.0</servlet-api.version>
-        <jsp-api.version>2.2.1-b03</jsp-api.version>
-        <!-- resetful支持 -->
-        <ws.rs-api.version>2.0.1</ws.rs-api.version>
-        <!-- 注解，标签，事务支持 -->
-        <jstl.version>1.2</jstl.version>
-        <annotation.version>1.2</annotation.version>
-        <transaction>1.2</transaction>
-        <!-- mysql驱动版本 -->
-        <mysql.version>5.1.38</mysql.version>
-        <!-- oracle jdbc驱动版本 -->
-        <jdbc.version>11.2</jdbc.version>
-        <!-- 连接池版本 -->
-        <druid.version>1.0.20</druid.version>
-        <!-- activiti工作流版本 -->
-        <activiti.version>5.16</activiti.version>
-        <!-- shiro权限管理版本 -->
-        <shiro.version>1.2.5</shiro.version>
-        <!-- fineReport报表管理版本 -->
-        <fineReport.version>7.1</fineReport.version>
-        <!-- Apache系列工具组件版本 -->
-        <commons-lang3.version>3.4</commons-lang3.version>
-        <commons-io.version>2.5</commons-io.version>
-        <commons-beanutils.version>1.9.2</commons-beanutils.version>
-        <commons-fileupload.version>1.3.2</commons-fileupload.version>
-        <commons-validator.version>1.5.1</commons-validator.version>
-        <commons-codec.version>1.10</commons-codec.version>
-        <poi.version>3.15-beta1</poi.version>
-        <!-- 阿里巴巴json处理工具版本 -->
-        <fastjson.version>1.2.12</fastjson.version>
-        <!-- 中文转拼音工具版本 -->
-        <pinyin4j.version>2.5.1</pinyin4j.version>
-        <!-- url重写过滤器，去掉sessionID工具版本 -->
-        <urlrewritefilter.version>4.0.4</urlrewritefilter.version>
-        <!-- 通用mapper版本 -->
-        <mapper.version>3.3.8</mapper.version>
-        <!-- 分页插件版本 -->
-        <pagehelper.version>4.1.6</pagehelper.version>
-        <!-- maven编译配置插件版本 -->
-        <compiler-plugin.version>3.5.1</compiler-plugin.version>
-        <!-- maven JS与CSS压缩插件版本 -->
-        <yuicompressor-plugin.version>1.5.1</yuicompressor-plugin.version>
-        <!-- maven打包项目生成war包版本 -->
-        <war-plugin.version>2.6</war-plugin.version>
-        <!-- tomcat7插件 -->
-        <tomcat7-plugin.version>2.2</tomcat7-plugin.version>
-        <!-- email -->
-        <commonsEmail.version>1.2</commonsEmail.version>
-        <restlet.version>2.2.1</restlet.version>
-        <spring-data-jpa.version>1.7.2.RELEASE</spring-data-jpa.version>
-        <hibernate-entitymanager.version>4.3.8.Final</hibernate-entitymanager.version>
-    </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.godgroup.framework</groupId>
+                <artifactId>framework-bom</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
-            <version>${slf4j.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.slf4j/jcl-over-slf4j -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
-            <version>1.7.14</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.14</version>
             <scope>provided</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.slf4j/jul-to-slf4j -->
@@ -119,12 +49,10 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>${logback.version}</version>
         </dependency>
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
@@ -134,45 +62,37 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
             <!-- 依赖关联spring的核心包及其他包 -->
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
-            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
-            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
-            <version>${dataformatXml.version}</version>
         </dependency>
         <dependency><!--spring-aop依赖 -->
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>${aspectj.version}</version>
         </dependency>
         <dependency><!-- spring提供的测试 -->
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
-            <version>${spring.version}</version>
         </dependency>
         <!-- Spring JDBC -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>${spring.version}</version>
             <scope>compile</scope>
         </dependency>
         <!-- 平台spring模块依赖结束 -->
@@ -181,12 +101,10 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>${mybatis.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
-            <version>${mybatis.spring.version}</version>
         </dependency>
 
 
@@ -196,43 +114,36 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>${servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
         <!-- servelet-api，jsp-api使用容器内置的，打包不需要jar -->
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
-            <version>${jsp-api.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency><!-- jstl标签支持 -->
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
-            <version>${jstl.version}</version>
         </dependency>
         <dependency><!-- java实现的restful支持 -->
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
-            <version>${ws.rs-api.version}</version>
-        </dependency>
+         </dependency>
         <dependency><!-- java注解支持 -->
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
-            <version>${annotation.version}</version>
-        </dependency>
+         </dependency>
         <!-- 平台web支持依赖结束 -->
 
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>${spring-data-jpa.version}</version>
-        </dependency>
+         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>${hibernate-entitymanager.version}</version>
-        </dependency>
+         </dependency>
 
         <!-- 数据库支持开始 -->
         <!-- <dependency>
@@ -243,139 +154,114 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
-        </dependency>
+         </dependency>
         <!--阿里巴巴druid连接池 -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>${druid.version}</version>
-        </dependency>
+         </dependency>
         <!-- 平台数据库支持结束 -->
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
-            <version>1.1.3</version>
-        </dependency>
+         </dependency>
         <dependency>
             <groupId>org.restlet.jse</groupId>
             <artifactId>org.restlet</artifactId>
-            <version>${restlet.version}</version>
-        </dependency>
+         </dependency>
         <dependency>
             <groupId>org.restlet.jse</groupId>
             <artifactId>org.restlet.ext.jackson</artifactId>
-            <version>${restlet.version}</version>
-        </dependency>
+         </dependency>
         <dependency>
             <groupId>org.restlet.jee</groupId>
             <artifactId>org.restlet</artifactId>
-            <version>${restlet.version}</version>
-        </dependency>
+         </dependency>
 
         <!-- 平台工具插件支持开始 -->
         <!-- Apache常用工具 -->
         <dependency><!-- 字符串，数组等操作 -->
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang3.version}</version>
-        </dependency>
+         </dependency>
         <dependency><!-- io流操作 -->
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
-        </dependency>
+         </dependency>
         <dependency><!-- 对象复制操作 -->
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
-            <version>${commons-beanutils.version}</version>
-        </dependency>
+         </dependency>
         <dependency><!-- 多文件上传组件操作 -->
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-            <version>${commons-fileupload.version}</version>
-        </dependency>
+         </dependency>
         <dependency><!-- 服务端校验操作 -->
             <groupId>commons-validator</groupId>
             <artifactId>commons-validator</artifactId>
-            <version>${commons-validator.version}</version>
-        </dependency>
+         </dependency>
         <dependency><!-- 处理字符编码操作 MD5，Base64 -->
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>${commons-codec.version}</version>
-        </dependency>
+         </dependency>
         <dependency><!-- poi操作excel -->
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>${poi.version}</version>
-        </dependency>
+         </dependency>
         <dependency><!-- poi操作xml -->
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>${poi.version}</version>
-        </dependency>
+         </dependency>
         <!-- 阿里巴巴json处理工具 -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
-        </dependency>
+         </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20160212</version>
-        </dependency>
+         </dependency>
         <!-- 中文转拼音工具 -->
         <dependency>
             <groupId>com.belerweb</groupId>
             <artifactId>pinyin4j</artifactId>
-            <version>${pinyin4j.version}</version>
-        </dependency>
+         </dependency>
         <!-- 重新url值过滤器，去掉url地址中sessionID -->
         <dependency>
             <groupId>org.tuckey</groupId>
             <artifactId>urlrewritefilter</artifactId>
-            <version>${urlrewritefilter.version}</version>
-        </dependency>
+         </dependency>
         <!--分页插件 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
-            <version>${pagehelper.version}</version>
-        </dependency>
+         </dependency>
         <!-- https://mvnrepository.com/artifact/com.sun.xml.stream/sjsxp -->
         <dependency>
             <groupId>com.sun.xml.stream</groupId>
             <artifactId>sjsxp</artifactId>
-            <version>1.0.2</version>
-        </dependency>
+         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>19.0</version>
-        </dependency>
+         </dependency>
         <!-- 平台权限管理shiro支持开始 -->
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-core</artifactId>
-            <version>${shiro.version}</version>
-        </dependency>
+         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-web</artifactId>
-            <version>${shiro.version}</version>
-        </dependency>
+         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring</artifactId>
-            <version>${shiro.version}</version>
-        </dependency>
+         </dependency>
         <dependency><!-- shiro缓存管理 -->
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-ehcache</artifactId>
-            <version>${shiro.version}</version>
-        </dependency>
+         </dependency>
         <!--<dependency>&lt;!&ndash;shiro会话调度管理 &ndash;&gt;-->
             <!--<groupId>org.apache.shiro</groupId>-->
             <!--<artifactId>shiro-quartz</artifactId>-->
@@ -397,17 +283,6 @@
     <build>
         <finalName>SSM</finalName>
         <plugins>
-            <!-- maven编译配置插件 -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
             <!--打包项目生成war包插件 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -424,6 +299,17 @@
                 <version>2.18.1</version>
                 <configuration>
                     <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.4.13.v20181111</version>
+                <configuration>
+                    <httpConnector>
+                        <port>8081</port>
+                    </httpConnector>
                 </configuration>
             </plugin>
         </plugins>
