--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 
-jdbc.url=jdbc:mysql://127.0.0.1:3306/library
+jdbc.url=jdbc:mysql://47.94.23.210:3306/library
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=woshiwang123abc
 
